# server/gen/restapi/gpsviewer/system/get_health_check_parameters.go
@@ -1,0 +1,46 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package system
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// NewGetHealthCheckParams creates a new GetHealthCheckParams object
+//
+// There are no default values defined in the spec.
+func NewGetHealthCheckParams() GetHealthCheckParams {
+
+	return GetHealthCheckParams{}
+}
+
+// GetHealthCheckParams contains all the bound params for the get health check operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters getHealthCheck
+type GetHealthCheckParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewGetHealthCheckParams() beforehand.
+func (o *GetHealthCheckParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
